# libpeio

./: CMakeLists.txt
example/libpeio/: CMakeLists.txt
example/libpeio_header_only/: CMakeLists.txt  CMakePresets.json  main.cpp
include/peio/: peio.h
include/peio/impl/: peio.cpp
